<resources>
    <string name="app_name">Fabits</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="username">University Rollno or Phone</string>
    <string name="password">College Password</string>
    <string name="title_activity_single_post">SinglePost</string>
    <string name="title_activity_profile_new">ProfileActivity_new</string>
     <string name="ErrorInternet">No Internet!!</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="TagLine">Share Moment share fabits</string>
    <string name="fabits_logo">fabits Logo</string>
    <string name="login_background">login Background</string>
    <string name="error">Error</string>
    <string name="i_know_that">I know that</string>
    <string name="dialog_header">Something went wrong !!</string>
    <string name="allow">Allow</string>
    <string name="block">Block</string>
    <string name="message">Message</string>
    <string name="smilies">smilies</string>
    <string name="image_upload">Image Upload</string>
    <string name="control">control</string>
    <string name="post_image">post Image</string>
    <string name="view">VIEW</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="phone_number">Phone Number</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="send">Send</string>
    <string name="whom_you_like_more">Whom you Like More?</string>
    <string name="notification">Notification</string>
    <string name="image_description">Image description</string>
    <string name="what_s_going_on">What\'s going on?</string>
    <string name="change_your_password">Change Your Password.</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="update_your_phone_number">Update your Phone Number.</string>
    <string name="select_your_gender">Select your Gender.</string>
    <string name="tap_on_image_to_change_your_profile_pic">Tap on Image to change your Profile Pic.</string>
    <string name="share_your_status">Share Your Status</string>
    <string name="share_plans_ideas_or_your_mood">Share plans, ideas, or your mood</string>
    <string name="share_you_status">share you status</string>
    <string name="otp_code">OTP Code</string>
    <string name="ok">OK</string>
    <string name="plus">+</string>
    <string name="follow">Follow</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="views">Views</string>
    <string name="facematch">FaceMatch</string>
    <string name="username1">UserName</string>
</resources>
