<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/a4564"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/fabits_logo"
            app:srcCompat="@drawable/ic_fabits_f"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1.10"
            android:gravity="center_horizontal"
            android:text="@string/TagLine"
            android:textColor="#80ffffff"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_corners_text_transparent"
            android:ems="14"
            android:fontFamily="sans-serif"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="#99000000"
            android:textColorHint="#50000000"
            android:textSize="@dimen/editText"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/rounded_corners_text_transparent"
            android:ems="14"
            android:fontFamily="sans-serif"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#99000000"
            android:textColorHint="#59000000"
            android:textSize="@dimen/editText"
            />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/button_background"
                android:padding="0dp"
                android:text="@string/login"
                android:textColor="@color/loginBackground"
                />

            <ProgressBar
                android:id="@+id/loading"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                />

        </FrameLayout>


        <Button
            android:id="@+id/forget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="#00ffffff"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>