<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:minWidth="300dp"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightest_header"
        android:gravity="center_horizontal"
        android:padding="12dp"
        android:text="@string/dialog_header"
        android:textColor="@color/views"
        android:textSize="18sp"
        />


    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:padding="1dp"
        android:src="@drawable/ic_error"
        android:tint="@color/danger"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="8dp"
        android:text="@string/error"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:textColor="@color/views"
        />


    <Button
        android:id="@+id/dialog_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/white_button_border_square"
        android:text="@string/i_know_that"
        android:textColor="@color/loginBackground"/>
</LinearLayout>

