<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="18dp">

        <ImageView
            android:id="@+id/close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_close"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MaterialTheme.Base">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/username1"
                android:textSize="14sp"
                android:theme="@style/MaterialTheme.Base"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MaterialTheme.Base">



        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/phone_number"
            android:textSize="14sp"
            android:theme="@style/MaterialTheme.Base"/>

    </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_dialog"
            android:layout_width="96dp"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@drawable/blue_button"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/ok"
            android:textColor="#ffffff"/>

    </LinearLayout>


</RelativeLayout>