<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/MaterialTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/MaterialTheme.PopupOverlay"

            >

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2"
        android:id="@+id/chatting"
        >

        <com.john.waveview.WaveView
            android:id="@+id/isSeeing"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/online"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/chats"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="60dp"
            android:layout_weight="2"
            >
        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-50dp"
            android:background="@color/M_light"
            android:orientation="horizontal"
            android:paddingBottom="2dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >

                <EditText
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corners"
                    android:gravity="center_vertical"
                    android:hint="@string/message"
                    android:maxLines="4"
                    android:paddingBottom="5dp"
                    android:paddingEnd="35dp"
                    android:paddingLeft="35dp"
                    android:paddingStart="35dp"
                    android:paddingTop="5dp"
                    android:textSize="16sp"
                    >

                </EditText>

                <ImageView
                    android:id="@+id/smiles"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="top"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="4dp"
                    android:scaleType="fitStart"
                    android:src="@drawable/ic_mood"
                    android:contentDescription="@string/smilies"/>


                <ImageView
                    android:id="@+id/imageUpload"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="end"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="4dp"
                    android:scaleType="fitStart"
                    android:src="@drawable/ic_image_upload"
                    android:contentDescription="@string/image_upload"/>
            </FrameLayout>

            <Button
                android:id="@+id/send"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/send_message"
                android:elevation="10dp"
                tools:targetApi="lollipop"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/smilesList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0"
            android:orientation="vertical"
            >

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabGravity="fill"
                app:tabIndicatorColor="@color/loginBackground"
                app:tabMode="fixed"
                app:tabPaddingBottom="-1dp"
                app:tabPaddingEnd="-1dp"
                app:tabPaddingStart="-1dp"
                app:tabPaddingTop="-1dp"/>

            <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/authenticate"
        >

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/allow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_button"
                android:text="@string/allow"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                />
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/white_button"
                android:text="@string/block"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:textColor="#95000000"
                />

    </LinearLayout>
</LinearLayout>
